@@ -23,6 +23,7 @@ Steven Walter        stevenrwalter at gmail dot com
 Aristotle Pagaltzis  pagaltzis at gmx dot de
 Wim Lewis            wiml at users dot sourceforge dot net
 Michael G Schwern    schwern at gmail dot com
+Serguei Trouchelle   STRO at cpan dot org
 
 several important bits of gtk2-perl were heavily inspired by pygtk, gtk-perl,
 and a good read-through of the gtk+ source code, so credit goes to those guys
