@@ -1,3 +1,12 @@
+2006-11-23	kaffeetisch
+
+	* GType.xs, gperl.h: Revert the G_OS_WIN32 change and just use
+	WIN32 instead.  G_OS_WIN32 doesn't seem to be defined on most
+	win32 boxes.
+
+	* AUTHORS, GType.xs: Use _strtoi64 and and _strtoui64 on win32 if
+	compiling with MSVC; patch from Serguei Trouchelle.
+
 2006-11-05	kaffeetisch
 
 	* GType.xs, gperl.h: Use G_OS_WIN32 instead of WIN32 or _WIN32.
